--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sinead's wbesite</title>
+    <link rel="stylesheet" href="styles.css">
+   
+    <title>Sinead's website</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+
+    Hello world
+
 </body>
 </html>
