--- a/index.html
+++ b/index.html
@@ -10,7 +10,38 @@
 </head>
 <body>
 
-    Hello world
+    <header>
+        <p>menu header section</p>
+    </header>
+
+    <main>
+
+        <section class ="intro-section">
+            <h1>Welcome to my website</h1>
+            <p>Hello, my name is Sinead and this is my final project for semester 1 of graphic and web design studio</p>
+        </section>
+
+        <section class ="typography-section">
+            typography section
+        </section>
+
+        <section class ="poster-section">
+            poster section 
+        </section>
+
+        <section class ="worksheet-section">
+            worksheet section
+        </section>
+
+        <section class ="reflection-section">
+            reflection paragraph section
+        </section>
+
+    </main>
+
+    <footer>
+        <p>footer informaton</p>
+    </footer>
 
 </body>
 </html>
