--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 <body>
 
     <header>
-        <p>menu header section</p>
+        <p>Sinead Doherty</p>
+
+        <ul>
+            <div class="container-navigation">
+                <button><a href="#Typography">Typography</a></button>
+                <button><a href="#CARP Posters">2.CARP Posters</a></button>
+                <button><a href="#HTML/CSS Worksheets">3.HTML/CSS Worksheets</a></button>
+                <button><a href="#Reflection">5.Reflectiona</a></button>
+                
+            </div>    
+        </ul>
+        
     </header>
 
     <main>
