--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <ul>
             <div class="container-navigation">
                 <button><a href="#Typography">Typography</a></button>
-                <button><a href="#CARP Posters">2.CARP Posters</a></button>
-                <button><a href="#HTML/CSS Worksheets">3.HTML/CSS Worksheets</a></button>
-                <button><a href="#Reflection">5.Reflectiona</a></button>
+                <button><a href="#CARP Posters">CARP Posters</a></button>
+                <button><a href="#HTML/CSS Worksheets">HTML/CSS Worksheets</a></button>
+                <button><a href="#Reflection">Reflection</a></button>
                 
             </div>    
         </ul>
