--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 
+    <p>Sinead Doherty</p>
+
     <header>
-        <p>Sinead Doherty</p>
+        
 
         <ul>
             <div class="container-navigation">
@@ -29,11 +31,14 @@
 
         <section class ="intro-section">
             <h1>Welcome to my website</h1>
+
+            <img class="mountains" src="images/background2.jpg" alt="picture of mountains">
+
             <p>Hello, my name is Sinead and this is my final project for semester 1 of graphic and web design studio</p>
         </section>
 
         <section class ="typography-section">
-            typography section
+            Typography
         </section>
 
         <section class ="poster-section">
