--- a/index.html
+++ b/index.html
@@ -37,23 +37,24 @@
             <p>Hello, my name is Sinead and this is my final project for semester 1 of graphic and web design studio</p>
         </section>
 
+    </main>
+
         <section class ="typography-section">
             Typography
         </section>
 
         <section class ="poster-section">
-            poster section 
+            Poster 
         </section>
 
         <section class ="worksheet-section">
-            worksheet section
+            Worksheet
         </section>
 
         <section class ="reflection-section">
-            reflection paragraph section
+            Reflection 
         </section>
 
-    </main>
 
     <footer>
         <p>footer informaton</p>
