--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
 
         <section class ="typography-section">
             Typography
+
+            <div class="container">
+
+                <div class="typography">
+                    <img class="typo" src="images/cake1.jpg" alt="a photo of cake">
+                
+                    <p class="typo-text caption">Cupcakes are a preferred way to enjoy cake. Many versions, all in
+                    little bite sized joy. Have one, have five! They are excellent.</p>
+
+                </div>
+             </div>
+
         </section>
 
         <section class ="poster-section">
