--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </main>
 
-        <section class ="aboutme-section">
+        <section class ="aboutme-section" id="About Me">
         About Me
 
         <p> about me info here</p>
@@ -49,7 +49,7 @@
 
         </section>
 
-        <section class ="typography-section">
+        <section class ="typography-section" id="Typography">
             Typography
         <div class="container">
 
@@ -122,7 +122,7 @@
         </section>
 
 
-        <section class ="poster-section">
+        <section class ="poster-section" id="CARP Posters">
             CARP Posters
         <div class="container">
 
@@ -165,8 +165,8 @@
         </section>
 
 
-        <section class ="worksheet-section">
-            Worksheet
+        <section class ="worksheet-section" id="HTML/CSS Worksheets">
+            HTML/CSS Worksheets
         <div class="htmlcontainer">
 
             <div class="worksheet-group">
@@ -198,7 +198,7 @@
         </section>
 
 
-        <section class ="reflection-section">
+        <section class ="reflection-section" id="Reflection">
             Reflection 
 
             <p> Reflection essay here</p>
