--- a/index.html
+++ b/index.html
@@ -56,16 +56,14 @@
                 <div class="typography-group">
                     <img class="typo-item" src="images/axial-final.jpg" alt="a photo of cake">
                 
-                    <p class="typo-text caption">Cupcakes are a preferred way to enjoy cake. Many versions, all in
-                    little bite sized joy. Have one, have five! They are excellent.</p>
+                    <p class="typo-text caption">In the axial system, the text is divided by a line, otherwise known as the axis. To execute this, I have created diagonal lines and placed text ajacent on both sides.</p>
 
                 </div>
 
                 <div class="typography-group">
                     <img class="typo-item" src="images/radial-final.jpg" alt="a photo of cake">
                 
-                    <p class="typo-text caption">Cupcakes are a preferred way to enjoy cake. Many versions, all in
-                    little bite sized joy. Have one, have five! They are excellent.</p>
+                    <p class="typo-text caption">The radial system consists of text which extends from a single point. i have created a   </p>
 
                 </div>
 
