carp text added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
 
-    <p>Sinead Doherty</p>
-
     <header>
         
+        <b>Sinead Doherty</b>
 
         <ul>
             <div class="container-navigation">
@@ -42,7 +41,7 @@
         <section class ="aboutme-section" id="About Me">
         About Me
 
-        <p>Hello, my name is Sinead and this is my final project for semester 1 of graphic and web design studio</p>
+        <p>Hello, my name is Sinead and this is my final project for semester 1 of graphic and web design studio.</p>
 
         <img class="me" src="images/cake2.jpg" alt="picture of me">
 
@@ -120,8 +119,7 @@
             <div class="carp-group">
                 <img class="carp-item" src="images/CARP-poster1-final.png" alt="a photo of cake">
 
-                <p class="carp-text caption">Cupcakes are a preferred way to enjoy cake. Many versions, all in
-                little bite sized joy. Have one, have five! They are excellent.</p>
+                <p class="carp-text caption">For my first design, I placed a large red hot air balloon on a soft blue background. These colours create a stark contract and draw the eyes towards the poster. The viewer eye is then drawn towards the title placed upon the distinct red. I have aligned the hot air balloon in the centre of the page. This lets the viewer know the theme of the event without yet reading the information. I have aligned text to the right of the balloon, however I have placed the sponsors to the left of the balloon in order to create a sense of balance. Repetition has been created by the repeating white clouds behind the balloon. The proximity of the text on the right is important in reference to the balloon, therefore, I have creates a cascading structure, meaning that each line of text has equal proximity to the balloon.</p>
 
             </div>
 
