--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
 
         <ul>
-            <div class="container-navigation">
+            <div class="container-navigation" id="Welcome to my website">
                 <b>Sinead Doherty</b>
                 <button class="push"><a href="#About Me" style="text-decoration:none">About Me</a></button>
                 <button><a href="#Typography" style="text-decoration:none">Typography</a></button>
@@ -185,7 +185,9 @@
 
         </section>
 
-    
+        <section class="back-to-top">
+            <button><a href="#Welcome to my website" style="text-decoration:none">Back to top</a></button>
+        </section>
 
     <footer>
         Sinead Doherty 2022 - Graphic and Web Design Studio Assignment 1
