--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
             <div class="worksheet-group">
                 <img class="worksheet-item" src="images/Screenshot (7).png" alt="a photo of cake">
             
-                <p class="worksheet-text caption">Cupcakes are a preferred way to enjoy cake. Many versions, all in
-                little bite sized joy. Have one, have five! They are excellent. Here is the <a href="file:///C:/Users/sinea/OneDrive/UWE/New%20folder/uwe-2022-2023/year1/GaWDS/HTML-CSS-task2/index.html"> link to the webpage.</a> And here is the <a href="https://github.com/sineaddoherty5/HTML-CSS"> link to my repository</a></p>
+                <p class="worksheet-text caption">On HTML/CSS worksheet 2, I learnt how to create a HTML document using !DOCUTYPE. I also learnt about block level elements such as p, h and ol, and inline elements like strong, small and em. I learned how to add a link using a and how to add an image using img.  On worksheet 3 I learnt how to add and link a CSS file to my existing HTML file. I learnt how to style elements using the CSS file such as changing fonts, adding borders and adding padding. I learnt how to link multiple HTML sheets and how to add a second CSS stylesheet. I was also introduced to flexbox through this worksheet. Here is the <a href="file:///C:/Users/sinea/OneDrive/UWE/New%20folder/uwe-2022-2023/year1/GaWDS/HTML-CSS-task2/index.html"> link to the webpage.</a> And here is the <a href="https://github.com/sineaddoherty5/HTML-CSS"> link to my repository</a></p>
             </p>
     
             </div>
