--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <section class ="aboutme-section" id="About Me">
         About Me
 
-        <p>Hello, my name is Sinead and this is my final project for semester 1 of graphic and web design studio.</p>
+        <p>Hello, my name is Sinead and this is my final project for term 1 of graphic and web design studio. I am 22 years old and I come from Ireland. When I have free time I like to watch films, draw, listen to music, read and go out with friends. I am really interested in digital media, particularly in areas like graphic design and post-production. I look forward to learning more in the future.</p>
 
-        <img class="me" src="images/cake2.jpg" alt="picture of me">
+        <img class="me" src="images/IMG_6544 (1).JPG" alt="picture of me">
 
         </section>
 
